--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,9 +39,8 @@ website:
         contents:
           - href: 0-intro-to-quarto/index.qmd
           - href: 1-hello-dashboards/index.qmd
-          - href: 2-dashboard-components/index.qmd
-          - href: 3-theming-styling/index.qmd
-          - href: 4-parameters-interactivity-deployment/index.qmd
+          - href: 2-components-theming/index.qmd
+          - href: 3-deployment/index.qmd
 
 
   page-footer:
